[gd_scene load_steps=28 format=3 uid="uid://1ff1weopghex"]

[ext_resource type="Script" path="res://ShieldEnemy.gd" id="1_veey1"]
[ext_resource type="Texture2D" uid="uid://dr8fvxm582nds" path="res://Sprites/Player/maleBase/base/base_dark8.png" id="2_rwips"]
[ext_resource type="Texture2D" uid="uid://dojr0tf8krxln" path="res://Sprites/Player/maleBase/base/base_dark9.png" id="3_uv8pg"]
[ext_resource type="Texture2D" uid="uid://cabchjotgjwd2" path="res://Sprites/Player/maleBase/base/base_dark10.png" id="4_mmpvi"]
[ext_resource type="Texture2D" uid="uid://b606ix5vt7h6a" path="res://Sprites/Player/maleBase/base/char1.png" id="5_qs37v"]
[ext_resource type="Texture2D" uid="uid://jqhysk0tda26" path="res://Sprites/Player/maleBase/base/char18.png" id="6_jise8"]
[ext_resource type="Texture2D" uid="uid://ci6b1iisoasmh" path="res://Sprites/Player/maleBase/base/char2.png" id="7_xjexs"]
[ext_resource type="Texture2D" uid="uid://qpvy7nerblwc" path="res://Sprites/Player/maleBase/base/char3.png" id="8_vjenl"]
[ext_resource type="Texture2D" uid="uid://c04l0adjdaivd" path="res://Sprites/Player/maleBase/base/char4.png" id="9_mudfc"]
[ext_resource type="Texture2D" uid="uid://dcuqd52omdmog" path="res://Sprites/Player/maleBase/base/char5.png" id="10_dk6kq"]
[ext_resource type="Texture2D" uid="uid://cdihgtxj33d5x" path="res://Sprites/Player/maleBase/base/char7.png" id="11_dcj7i"]
[ext_resource type="Texture2D" uid="uid://rw61ggynusn7" path="res://Sprites/Player/maleBase/base/char6.png" id="12_40acd"]
[ext_resource type="Script" path="res://Scripts/State.gd" id="13_utisb"]
[ext_resource type="Texture2D" uid="uid://b3bwcq37g5jv6" path="res://Sprites/Tile2.png" id="14_ehgut"]
[ext_resource type="Texture2D" uid="uid://dl03ttlb24ada" path="res://Sprites/Explosion/explosion1.png" id="15_velbo"]
[ext_resource type="Texture2D" uid="uid://dt4xoaxgrgijr" path="res://Sprites/Explosion/explosion2.png" id="16_5lg0r"]
[ext_resource type="Texture2D" uid="uid://b5gger2f4230r" path="res://Sprites/Explosion/explosion3.png" id="17_ue0ur"]
[ext_resource type="Texture2D" uid="uid://bodebyb4vgk07" path="res://Sprites/Explosion/explosion4.png" id="18_rqiyh"]
[ext_resource type="Texture2D" uid="uid://biskv30bbbw7q" path="res://Sprites/Explosion/explosion5.png" id="19_oif3v"]
[ext_resource type="Texture2D" uid="uid://cb2clutnd13pb" path="res://Sprites/Explosion/explosion6.png" id="20_vxekw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmtb7"]
size = Vector2(20, 20.8696)

[sub_resource type="SpriteFrames" id="SpriteFrames_81sey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rwips")
}, {
"duration": 1.0,
"texture": ExtResource("3_uv8pg")
}, {
"duration": 1.0,
"texture": ExtResource("4_mmpvi")
}],
"loop": false,
"name": &"crouch",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qs37v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_jise8")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_xjexs")
}, {
"duration": 1.0,
"texture": ExtResource("8_vjenl")
}, {
"duration": 1.0,
"texture": ExtResource("9_mudfc")
}, {
"duration": 1.0,
"texture": ExtResource("10_dk6kq")
}, {
"duration": 1.0,
"texture": ExtResource("11_dcj7i")
}, {
"duration": 1.0,
"texture": ExtResource("12_40acd")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kdqwi"]
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_skc31"]
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vh2oe"]
size = Vector2(20.7143, 37.0463)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gss8k"]
size = Vector2(24.3077, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_ahjkr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_velbo")
}, {
"duration": 1.0,
"texture": ExtResource("16_5lg0r")
}, {
"duration": 1.0,
"texture": ExtResource("17_ue0ur")
}, {
"duration": 1.0,
"texture": ExtResource("18_rqiyh")
}, {
"duration": 1.0,
"texture": ExtResource("19_oif3v")
}, {
"duration": 1.0,
"texture": ExtResource("20_vxekw")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="ShieldEnemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_veey1")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 25.6)
scale = Vector2(1, 3.68)
shape = SubResource("RectangleShape2D_xmtb7")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.458824, 0.458824, 1)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_81sey")
animation = &"crouch"
autoplay = "walk"

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 20)
scale = Vector2(1, 1.16)
collision_layer = 4
collision_mask = 0

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2(0.640001, 1)
shape = SubResource("CapsuleShape2D_kdqwi")

[node name="State" type="Node" parent="."]
script = ExtResource("13_utisb")

[node name="Hitbox" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(24, 24)
scale = Vector2(1.6, 1)
shape = SubResource("CapsuleShape2D_skc31")
disabled = true

[node name="WallCheck" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="WallCheck"]
position = Vector2(20, 40)
scale = Vector2(1.12, 1.12196)
shape = SubResource("RectangleShape2D_vh2oe")

[node name="Shield" type="StaticBody2D" parent="."]
position = Vector2(24, 24)
scale = Vector2(1, 1.12)
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Shield"]
modulate = Color(0.662745, 0.172549, 0.74902, 1)
scale = Vector2(0.279999, 2.24)
texture = ExtResource("14_ehgut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2(-1.90735e-06, 0)
scale = Vector2(0.297079, 1.32349)
shape = SubResource("RectangleShape2D_gss8k")
disabled = true

[node name="ShieldArea" type="Area2D" parent="Shield"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield/ShieldArea"]
position = Vector2(-1.90735e-06, 0)
scale = Vector2(0.697079, 1.44349)
shape = SubResource("RectangleShape2D_gss8k")

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(136, 16)
scale = Vector2(12.5621, 2.75457)
shape = SubResource("RectangleShape2D_vh2oe")

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 200.0
target_desired_distance = 100.0
debug_enabled = true

[node name="LedgeRaycast" type="RayCast2D" parent="."]
position = Vector2(1.90735e-06, 0)
target_position = Vector2(32, 80)
hit_from_inside = true

[node name="TurnAroundTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 16)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_ahjkr")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="WallCheck" to="." method="_on_wall_check_body_entered"]
[connection signal="body_entered" from="Shield/ShieldArea" to="." method="_on_shield_area_body_entered"]
[connection signal="body_entered" from="PlayerCheck" to="." method="_on_player_check_body_entered"]
[connection signal="timeout" from="TurnAroundTimer" to="." method="_on_turn_around_timer_timeout"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
